# DAQ

./: .gitignore  README.md
CAEN_DAQ/: CMakeLists.txt
CAEN_DAQ/Application/: miniDAX.cpp  miniDAX.cpp~  scaler.cpp
CAEN_DAQ/Core/: CMakeLists.txt
CAEN_DAQ/Core/Include/: control.h~  scaler.h
CAEN_DAQ/Core/Source/: adc.cpp  adc.cpp~  control.cpp  control.cpp~  xml.cpp  xml.cpp~
CAEN_DAQ/GUI/Source/: graph.cpp  graph.cpp~
CDAQ/: .gitignore  CMakeLists.txt
CDAQ/Application/: CMakeLists.txt  DC_Measurement.cpp  DC_MeasurementBoard0.cpp  DC_MeasurementBoard1.cpp  MultiDAQ.cpp  SingleDAQ.cpp  SingleDAQBoard0.cpp  SingleDAQBoard1.cpp
CDAQ/Core/: CMakeLists.txt
CDAQ/Core/Include/: ADCManager.h  ADCManager.h~  ADCManager1724.h  ADCManager1730.h  ADCManager1730_16Ch.h  ADCManager1730_ZLE16Ch.h  DCManager.h  MultiADCManager.h  (+5 more)
DAQ/Application/: CMakeLists.txt  miniDAX.cpp  miniDAX.cpp~
DAQ/Core/: CMakeLists.txt~
DAQ/GUI/: CMakeLists.txt  CMakeLists.txt~
DAQ/Plugins/: CMakeLists.txt  CMakeLists.txt~
HV/: hv.py
New_DAQ_Dev/Application/: CMakeLists.txt  DAQ.cpp  test.cpp
New_DAQ_Dev/Core/: CMakeLists.txt
New_DAQ_Dev/Core/Include/: ADCManager.h  ADCManager1720.h  ScopeManager.h  SlowcontrolManager.h  StorageManager.h
New_DAQ_Dev/Core/Source/: ADCManager.cpp  ADCManager.cpp~  ADCManager1720.cpp  ScopeManager.cpp  SlowcontrolManager.cpp  StorageManager.cpp
New_DAQ_Dev/Plugins/: CMakeLists.txt~
PDAQ/Application/: ZDAQ.cpp~
PSI_DAQ/Application/: ZDAQ.cpp
PSI_DAQ/Core/: CMakeLists.txt  CMakeLists.txt~
PSI_DAQ/Macro/: Findlibusb-1.0.cmake~
Pulser/: pulser.py
Scaler/Application/: scaler.cpp
Scaler_CAEN/: .cproject  .project  CMakeLists.txt
Scaler_CAEN/Application/: CMakeLists.txt  scaler.cpp  scaler.cpp~  scaler2.cpp  scaler_bk.cpp
Scaler_CAEN/Core/: CMakeLists.txt  CMakeLists_2.txt
Scaler_CAEN/Core/Include/: ReadScalerInput.h  ScalerManager.h  ScalerManager.h~  cfgReader.h  discriminator.h~  discriminator2.h  discriminator3.h  discriminator_bk.h  discriminator_reader.h
Scaler_CAEN/Core/Source/: DiscriminatorManager.cpp  ReadScalerInput.cpp  ScalerManager.cpp  ScalerManager.cpp~  cfgReader.cpp  discriminator.cpp  discriminator.cpp~  discriminator2.cpp  discriminator3.cpp  discriminator_bk.cpp  discriminator_reader.cpp  xml.cpp
TDC/Application/: tdc.cpp
XScaler/Application/: main.cc  main.cc~
(+56 files in other folders)
